0121: Setting up tt04-solo-squash to use solo_squash submodule

--- a/0086-2023-05-26.md
+++ b/0086-2023-05-26.md
@@ -1,5 +1,10 @@
 # 26 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0085**-2023-05-25.md](./0085-2023-05-25.md) | [**0087**-2023-05-27.md](./0087-2023-05-27.md) |
+
+
 # Notes
 
 *   Raybox: Change external register (vector) writing to be buffered/queued so that it can happen any time the host controller
