--- a/0087-2023-05-27.md
+++ b/0087-2023-05-27.md
@@ -1,5 +1,10 @@
 # 27 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0086**-2023-05-26.md](./0086-2023-05-26.md) | [**0088**-2023-05-28.md](./0088-2023-05-28.md) |
+
+
 *   I created the [raybox_reciprocal repo](https://github.com/algofoogle/raybox_reciprocal)
     to try and optimise the reciprocal approximator in isolation. 
 *   I've worked out that the `reciprocal` design (including `lzc`) can fit in 200x200&micro;m
