--- a/0088-2023-05-28.md
+++ b/0088-2023-05-28.md
@@ -1,5 +1,10 @@
 # 28 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0087**-2023-05-27.md](./0087-2023-05-27.md) | [**0089**-2023-06-05.md](./0089-2023-06-05.md) |
+
+
 *   Read [cocotb Quickstart guide](https://docs.cocotb.org/en/stable/quickstart.html).
 *   Started working on faster LZC per [this](https://digitalsystemdesign.in/leading-zero-counter/)
     (based on [this research paper](http://iris.elf.stuba.sk/JEEEC/data/pdf/6_115-05.pdf)).
