--- a/0121-2023-07-26.md
+++ b/0121-2023-07-26.md
@@ -56,10 +56,76 @@ but only when compiled for Windows. Maybe a bug related to MinGW?
     *   RGB222 with temporal ordered dither (to use just 3 outputs).
     *   RGB222 without speaker (to use 6 outputs).
 
+
+# Overall design plan for tt04-solo-squash submission
+
+Here's my spec for tt04-solo-squash:
+
+*   Remove LZC.
+*   Ideally the game should support free-running so long as it gets
+    reset. This means still supporting up/down keys by default.
+*   Control via SPI (3 inputs needed, unless we can work without `SS`).
+    *   Buffered until a frame is ready to load the data.
+    *   Can set the paddle position directly.
+    *   Optionally could set paddle size, ball size, and ball motion.
+    *   Optionally can set/reset pause mode?
+    *   Optionally could select between registered and direct outputs?
+*   Other inputs:
+    *   Pause.
+    *   New Game.
+    *   Down/Up will still increment/decrement paddle position once per
+        frame, even if set via SPI.
+*   Outputs:
+    *   HSYNC
+    *   VSYNC
+    *   R, G, B
+    *   Speaker
+*   Debug ports?
+*   READING some info via SPI MISO?
+*   VBLANK IRQ?
+*   Should we try having a mode that can read from an external memory
+    and display it on screen, with a configurable divider for different
+    pixel widths? As an experiment, we could make this one of:
+    *   A "sprite" for the ball.
+    *   A repeating pattern for the background, either 1-bit or RGB222?
+        For example, we could use 6 ROM bits to provide RGB222 colours,
+        with 4 of those bits via dedicated inputs, and the other 2 via
+        bidirs, then use the remaining 6 bidirs as ROM address (64 pixels,
+        which could be arranged, say, as 8x8 pixels). **WAIT: NO GOOD.**
+        If we do this, we have no inputs left for SPI.
+    *   A pattern for the walls?
+    *   Some other overlay/logo/text or whatever.
+*   Other ideas:
+    *   Is there a way to give this a score? Based on time between misses,
+        or maybe counting bounces?
+    *   Multiple designs in one, selectable via SPI.
+    *   Ability to configure patterns via registers that turn on/off certain
+        bitwise logic combos.
+    *   Controlling VGA timing via SPI?
+
+
 # Notes
 
 *   `config.tcl` from tt04-submission-template has some interesting stuff in it.
 *   It sets the target clock speed to 50MHz (20ns period). For me, this could be an issue if I only need a 25MHz
     clock for VGA, and my design is sophisticated enough that it can't get above this due to propagation delays
     on all my heavy combo logic.
-
+*   Other TT04 ideas:
+    *   General VGA device:
+        *   Optional SPI control.
+        *   Configurable timing.
+        *   Experiments in un/registered outputs.
+        *   Experiments in reading external memory.
+        *   Route inputs to various VGA outputs, while blanking them
+            via `visible` gate.
+        *   Trying out minimal "framebuffer" using a small number of DFFs or DFFRAM?
+        *   Modes to try out other VGA "games" and tests.
+        *   Delta-based bit packing of raycaster column heights, e.g. we could assume
+            most inter-column height deltas will fit within 4 bits (+/- 8 height steps), and a counter could be used to specify how many "regular" columns
+            there are before a break that exceeds this 4-bit range.
+            We could assume that there won't ever be more than 32 "extreme" columns,
+            so: 32x4bits for counters + 32x6bits for extreme (reset) values +
+            128x4bits for steps. This is 832 bits for 160x120 (not inc. 'side')
+            which would normally take 160x6 (960 bits), but I'm sure we could do better.
+        *   How efficient would it be to RLE column heights, even??
+            Hmm, a single 45-degree wall angle would be enough to bust it.
