0122: tt04-solo-squash stuff

--- a/0084-2023-05-24.md
+++ b/0084-2023-05-24.md
@@ -1,5 +1,10 @@
 # 24 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0083**-2023-05-23.md](./0083-2023-05-23.md) | [**0085**-2023-05-25.md](./0085-2023-05-25.md) |
+
+
 # Raybox
 
 *   Tried for a while today to see if I could get it to synthesise using OpenLane, set to an
