--- a/0085-2023-05-25.md
+++ b/0085-2023-05-25.md
@@ -1,5 +1,10 @@
 # 25 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0084**-2023-05-24.md](./0084-2023-05-24.md) | [**0086**-2023-05-26.md](./0086-2023-05-26.md) |
+
+
 # Raybox
 
 ## Accomplishments
