--- a/0122-2023-07-27.md
+++ b/0122-2023-07-27.md
@@ -21,3 +21,28 @@
     in Photoshop and get 4ns horizontal resolution.
 *   Update READMEs.
 
+## Main stuff
+
+For now this is being done in the `solo_squash` repo:
+
+*   Created `spi` branch.
+*   Started implementing SPI clocking stuff.
+
+## solo_squash repo tags
+
+*   0.9: Basically the version that was used for TT03p5
+*   1.0: Minor tidy-up of 0.9
+*   And I will make 2.0: new version with new features for TT04
+    (or should I call it version 4.0?)
+
+# Notes
+
+*   Metastability, clock domains, etc: Why does
+    [this page](https://www.fpga4fun.com/SPI2.html) have a sync on MOSI? I would assume it only gets sampled by anything on the
+    rising edge of SCLK, at which point it should well and truly be
+    stable. Either it's in there because a metastable state outside
+    of clocking could have an effect, or because it aims to avoid a
+    case where there might be a Master error that could propagate?
+*   Is there a way we can prove that *without* sync on SPI bus we get
+    an error? Can we try this on the FPGA?
+*   Maybe try reading more here: https://www.fpga4fun.com/CrossClockDomain.html
