Minor extra info on 0123

--- a/0123-2023-08-14.md
+++ b/0123-2023-08-14.md
@@ -16,11 +16,14 @@ I've implemented some basic skeleton modules in it so it can drive a VGA display
 
 Next steps:
 *   Set up VirtualBox VM to help with writing journals.
+*   Fixed-point parameters/helpers.
 *   Vector registers; worry about updating later.
 *   Map ROM.
-*   Map/debug overlays to prove they're working?
+*   Map/debug overlays to prove they're working? e.g. render intermediate view vector (traceX/Y) per each row.
 *   Row tracer.
 
+**NOTE:** Is it possible to turn `wall_tracer` into a state machine for the whole frame, rather than just each row?
+Then it could use various inputs to keep track of the viewplane, etc, more efficiently.
 
 [raybox-zero]: https://github.com/algofoogle/raybox-zero
 [Raybox]: https://github.com/algofoogle/raybox
