--- a/0124-2023-08-16.md
+++ b/0124-2023-08-16.md
@@ -6,6 +6,12 @@
 
 # More raybox-zero
 
+## Notes
+
+*   Need to try and understand my own `rayAddend` (`rayAddendX` and `rayAddendY`) better,
+    from the original Raybox, and in particular the use of `>>>8` (&div;256) versus 
+    any other value, and how it compares with the half-height multiplier (e.g. &times;240).
+
 ## Next steps
 
 *   Implement map -- internal ROM initially; external memory access option later?
