More updates to 0124

--- a/0124-2023-08-16.md
+++ b/0124-2023-08-16.md
@@ -8,10 +8,14 @@
 
 ## Notes
 
+*   Started transferring stuff from the Raybox tracer into `wall_tracer` and recalling how
+    it worked, writing some improved notes, and looking for places to optimise.
 *   Need to try and understand my own `rayAddend` (`rayAddendX` and `rayAddendY`) better,
     from the original Raybox, and in particular the use of `>>>8` (&div;256) versus 
     any other value, and how it compares with the half-height multiplier (e.g. &times;240).
 
 ## Next steps
 
+*   Get more of the original Raybox tracer transferred over.
 *   Implement map -- internal ROM initially; external memory access option later?
+*   Make sure tracer works with our slightly different frame/row-based inputs/outputs.
