0125: raybox-zero tracing works

--- a/0083-2023-05-23.md
+++ b/0083-2023-05-23.md
@@ -1,5 +1,9 @@
 # 23 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0082**-2023-05-22.md](./0082-2023-05-22.md) | [**0084**-2023-05-24.md](./0084-2023-05-24.md) |
+
 # Raybox
 
 ## Achievements
