--- a/0082-2023-05-22.md
+++ b/0082-2023-05-22.md
@@ -1,5 +1,10 @@
 # 22 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0081**-2023-05-20.md](./0081-2023-05-20.md) | [**0083**-2023-05-23.md](./0083-2023-05-23.md) |
+
+
 # Raybox
 
 ## Achievements
