More notes on 0125

--- a/0125-2023-08-18.md
+++ b/0125-2023-08-18.md
@@ -40,3 +40,22 @@ It's made of the following additions today:
 *   When doing optimisation, work on any shortcuts that can be made with the FSM, but also adding in the extra reciprocal (and maybe multiply) steps.
 *   Much later, when we know TT04 fit is good and optimisations are done,
     then try texture mapping and (say) reading map data from external memory...?
+
+## Future features
+
+*   SPI interface to set:
+    *   Vectors, with option to either load for the next frame only, or load directly for next line (which might also require setting rayAddend directly?)
+    *   Colours, esp. background halves.
+    *   Map/debug overlay visibility.
+    *   "Mode"? e.g. external control or SPI direct only. Or enable debug output signals, dither, etc?
+*   Texture mapping.
+*   External memory access: map and/or textures?
+*   1 sprite? Might not be too bad.
+
+## Other notes
+
+Some interesting things to check out:
+*   https://github.com/htfab/asicle
+*   https://github.com/deepsita/approximate_adder_axha
+*   https://libresilicon.com/
+*   https://github.com/supratimdas/NoobsCpu-8bit
