0126: tt04-raybox-zero started, but gds hardening crashes

--- a/0078-2023-05-10.md
+++ b/0078-2023-05-10.md
@@ -1,5 +1,10 @@
 # 10 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0077**-2023-05-09.md](./0077-2023-05-09.md) | [**0079**-2023-05-12.md](./0079-2023-05-12.md) |
+
+
 # Raybox
 
 ## Accomplishments
