--- a/0080-2023-05-16.md
+++ b/0080-2023-05-16.md
@@ -1,5 +1,9 @@
 # 16 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0079**-2023-05-12.md](./0079-2023-05-12.md) | [**0081**-2023-05-20.md](./0081-2023-05-20.md) |
+
 # Update
 
 *   Last few days had no updates because I've been unwell.
