--- a/0077-2023-05-09.md
+++ b/0077-2023-05-09.md
@@ -1,5 +1,9 @@
 # 9 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0076**-2023-05-07.md](./0076-2023-05-07.md) | [**0078**-2023-05-10.md](./0078-2023-05-10.md) |
+
 # Raybox
 
 ## Accomplishments
