--- a/0079-2023-05-12.md
+++ b/0079-2023-05-12.md
@@ -1,5 +1,10 @@
 # 12 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0078**-2023-05-10.md](./0078-2023-05-10.md) | [**0080**-2023-05-16.md](./0080-2023-05-16.md) |
+
+
 # Raybox
 
 ## Accomplishments
