--- a/0081-2023-05-20.md
+++ b/0081-2023-05-20.md
@@ -1,5 +1,9 @@
 # 20 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0080**-2023-05-16.md](./0080-2023-05-16.md) | [**0082**-2023-05-22.md](./0082-2023-05-22.md) |
+
 # Raybox
 
 ## Accomplishments
