0127: Exploring tt04-raybox-zero synthesis, chasing yosys-abc bug

--- a/0070-2023-04-30.md
+++ b/0070-2023-04-30.md
@@ -1,5 +1,9 @@
 # 30 Apr 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0069**-2023-04-29.md](./0069-2023-04-29.md) | [**0071**-2023-05-01.md](./0071-2023-05-01.md) |
+
 # Raybox
 
 *   Started `q16d16` branch for trying out Q16.16 fixed-point.
