--- a/0073-2023-05-03.md
+++ b/0073-2023-05-03.md
@@ -1,5 +1,9 @@
 # 3 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0072**-2023-05-02.md](./0072-2023-05-02.md) | [**0074**-2023-05-04.md](./0074-2023-05-04.md) |
+
 # Raybox
 
 ## Raybox next steps
