--- a/0074-2023-05-04.md
+++ b/0074-2023-05-04.md
@@ -1,5 +1,9 @@
 # 4 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0073**-2023-05-03.md](./0073-2023-05-03.md) | [**0075**-2023-05-06.md](./0075-2023-05-06.md) |
+
 # Raybox notes
 
 ## Accomplishments
