--- a/0075-2023-05-06.md
+++ b/0075-2023-05-06.md
@@ -1,5 +1,9 @@
 # 6 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0074**-2023-05-04.md](./0074-2023-05-04.md) | [**0076**-2023-05-07.md](./0076-2023-05-07.md) |
+
 Quick update tonight; didn't get a chance to work on anything today.
 
 Next steps I'd like to look into are below...
