--- a/0071-2023-05-01.md
+++ b/0071-2023-05-01.md
@@ -1,5 +1,9 @@
 # 1 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0070**-2023-04-30.md](./0070-2023-04-30.md) | [**0072**-2023-05-02.md](./0072-2023-05-02.md) |
+
 # Raybox
 
 ## Achievements
