--- a/0072-2023-05-02.md
+++ b/0072-2023-05-02.md
@@ -1,5 +1,9 @@
 # 2 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0071**-2023-05-01.md](./0071-2023-05-01.md) | [**0073**-2023-05-03.md](./0073-2023-05-03.md) |
+
 # Raybox
 
 ## Achievements
