--- a/0076-2023-05-07.md
+++ b/0076-2023-05-07.md
@@ -1,5 +1,10 @@
 # 7 May 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0075**-2023-05-06.md](./0075-2023-05-06.md) | [**0077**-2023-05-09.md](./0077-2023-05-09.md) |
+
+
 # Raybox
 
 ## Achievements
