Update 0127 with new OpenLane container launch instructions

--- a/0127-2023-08-20.md
+++ b/0127-2023-08-20.md
@@ -908,11 +908,35 @@ The standard `./tt/tt_tool.py --create-png` method takes a long time for 8x2 til
 5.  Open for viewing: `xdg-open gds_render_png24.png`
 
 
+## Going into the updated OpenLane `3bc9d02` Docker container
+
+```bash
+export OPENLANE_ROOT=~/tt/openlane
+export PDK_ROOT=~/tt/pdk
+export PDK=sky130A
+export OPENLANE_TAG=2023.06.26
+export OPENLANE_IMAGE_NAME=efabless/openlane:3bc9d02d0b34ad032921553e512fbe4bebf1d833
+
+docker run                                      \
+    --rm                                        \
+    --volume    $OPENLANE_ROOT:/openlane        \
+    --volume    $PDK_ROOT:$PDK_ROOT             \
+    --volume    $(pwd):/work                    \
+    --env       PDK=$PDK                        \
+    --env       PDK_ROOT=$PDK_ROOT              \
+    --user      $(id -u $USER):$(id -g $USER)   \
+    --network   host                            \
+    --tty                                       \
+    --interactive                               \
+    $OPENLANE_IMAGE_NAME
+```
+
+Running `yosys-abc -h` in this container shows that while it is still called "ABC 1.01" (like all the others), this one was built in April 2023, while the other versions I have are from 2022.
+
 
 ## Next steps
 
 *   Options to conditionally exclude chunks of the design that might allow us to narrow down the yosys issue.
-*   Instructions for how to go into the new `3bc9d02` OpenLane container.
 *   Document MPW8-from-boot OpenLane run based on TT03p5, using default OpenLane image.
 *   Document how to view the GDS from a TT harden, using Matt's scripts: see how much tile area we're using.
 *   Document MPW8-from-boot OpenLane run based on TT04, using new OpenLane image.
@@ -929,6 +953,7 @@ The standard `./tt/tt_tool.py --create-png` method takes a long time for 8x2 til
 
 ## Notes
 
+*   Don't expect the TT04 GHA flow to get updated, even if we do get upstreams to fix the yosys-abc bug: It would probably be too risky for Matt running TT04 this close to the September 8th deadline. Instead, I'll probably have to tease out where the cause of the issue is, and I'm thinking it could be something to do with the negative vector bit indices, or design complexity.
 *   I wonder if it would be valid to clock the tracer at half speed? It would probably still complete with plenty of time per line. Even though that would look like a second clock domain, that might be fine; some sync in and out might make it OK and hopefully then STA would find it to be good.
 *   `height_scaler` reciprocal is "always on" so this will be probably one of our worst paths. It's not really meant to be done this way: It could be replaced with reciprocal sharing in FSM (for flat shading) or possibly a different way to precalc texture DDA if doing texture-mapped walls.
 *   Estimated power for this design at 25MHz seems quite high:
