Minor update to 0127

--- a/0127-2023-08-20.md
+++ b/0127-2023-08-20.md
@@ -61,6 +61,7 @@
     ```
     </details>
 *   The yosys-abc crash doesn't seem to produce any other artefacts that would help us work out what's going on. My next step would be to try starting up the OpenLane container, and see if I can at least intercept where this crash occurs to work out what might be the cause, etc.
+*   I also tried the standard OpenLane, 50MHz, with 4x2 tiles and it completed: Only 35% utilisation (i.e. it made it more efficient than 20% in 8x2?) with milder slew violations (only fanouts, mostly for clock buffers). Setup violations still exist; a slack of about -5.72ns, which should mean a max clock speed of ~38.88MHz... still actually better than I need, but let's try for the 50MHz target that is kinda mandated by TT04. NOTE: This is a bit contrived; even if I manage to optimise it a lot, the other things that will probably grow it again are SPI access to `pov` and how this will also mean fewer constant logic paths for synth to collapse.
 
 ### Reports
 
@@ -793,7 +794,7 @@ GDS render of SVG created by `./tt/tt_tool.py --create-svg`:
 
 #### MPW8 new OpenLane `3bc9d02` at 50MHz
 
-*   Linter warnings: These look like they might be new in this version of OpenLane, and reported by Verilator. These come from `run/wokwi/logs/synthesis/linter.log` and we could go through them to possibly add in `verilator lint_off` statements in our source: <details><summary><strong>Click to see linter warnings</strong></summary>
+*   Linter warnings: These look like they might be new in this version of OpenLane, and reported by Verilator. These come from `runs/wokwi/logs/synthesis/linter.log` and we could go through them to possibly add in `verilator lint_off` statements in our source: <details><summary><strong>Click to see linter warnings</strong></summary>
 
     ```
     %Warning-PINMISSING: /work/src/top.v:15:10: Cell has missing pin: 'hpos'
@@ -874,7 +875,7 @@ GDS render of SVG created by `./tt/tt_tool.py --create-svg`:
         |                                     ^~~~
     ```
     </details>
-*   Synthesis warnings: These come from `run/wokwi/logs/synthesis/1-synthesis.warnings` and again we could use some of these as a guide for tightening up the code: <details><summary><strong>Click to see synthesis warnings</strong></summary>
+*   Synthesis warnings: These come from `runs/wokwi/logs/synthesis/1-synthesis.warnings` and again we could use some of these as a guide for tightening up the code: <details><summary><strong>Click to see synthesis warnings</strong></summary>
 
     ```
     /work/src/raybox-zero/src/rtl/pov.v:15: Warning: converting real value 6.144000e+03 to binary 24'000000000001100000000000.
