Updates on 0127 re tt04-reciprocal repo

--- a/0127-2023-08-20.md
+++ b/0127-2023-08-20.md
@@ -6,7 +6,7 @@
 
 # raybox-zero
 
-## In progress
+## In progress: Trying to fix GDS hardening
 
 *   [0066](./0066-2023-04-26.md) has more detail/notes about hardening TT GDS locally, from TT03.
 *   I tried hardening tt04-raybox-zero as-is using TT03p5 method (default MPW8 OpenLane image) but latest tt_tool.py scripts. It worked using 8x2 tiles, but has violations when using the 50MHz clock target that is the default in `config.tcl`:
@@ -935,9 +935,21 @@ docker run                                      \
 Running `yosys-abc -h` in this container shows that while it is still called "ABC 1.01" (like all the others), this one was built in April 2023, while the other versions I have are from 2022.
 
 
+## A new TT04 test repo: Reciprocal
+
+*   Let's take the `lzc` and `reciprocal` modules and put them in their own TT04 test.
+*   This will help us work out how many tiles they would actually use up, and how many standard cells.
+*   If they succeed in hardening using the TT04 GHAs, then we can assume negative vector bit indices are OK ([as the IEEE 1364-2001 spec says they should be](https://inst.eecs.berkeley.edu//~cs150/fa06/Labs/verilog-ieee.pdf#page=36)), and perhaps try working up in complexity from there. We could even assemble a test repo made out of many git submodules.
+*   If it fails in yosys-abc again, we need to try creating a simpler negative-index example and see if that's the problem, or something else about the reciprocal/lzc design.
+
+To make the new [tt04-reciprocal] repo, I followed my own guide in [0119](./0119-2023-07-22.md).
+
+
+
 ## Next steps
 
-*   Options to conditionally exclude chunks of the design that might allow us to narrow down the yosys issue.
+*   Flesh out the [tt04-reciprocal] test repo and try hardening it.
+*   Options to conditionally exclude chunks of the design that might allow us to narrow down the yosys issue. This is difficult, because cutting out most things will take a whole bunch of other stuff out with them anyway; they're somewhat interdependent.
 *   Document MPW8-from-boot OpenLane run based on TT03p5, using default OpenLane image.
 *   Document how to view the GDS from a TT harden, using Matt's scripts: see how much tile area we're using.
 *   Document MPW8-from-boot OpenLane run based on TT04, using new OpenLane image.
@@ -968,3 +980,4 @@ Running `yosys-abc -h` in this container shows that while it is still called "AB
 *   Compare with at 50MHz, and it's about double (1.5W)!
 
 [Hardening Tiny Tapeout Projects Locally]: https://docs.google.com/document/d/1aUUZ1jthRpg4QURIIyzlOaPWlmQzr-jBn3wZipVUPt4/edit
+[tt04-reciprocal]: https://github.com/algofoogle/tt04-reciprocal
