--- a/0128-2023-08-21.md
+++ b/0128-2023-08-21.md
@@ -2,7 +2,7 @@
 
 | Previous journal: | Next journal: |
 |-|-|
-| [**0127**-2023-08-20.md](./0127-2023-08-20.md) | *Next journal TBA* |
+| [**0127**-2023-08-20.md](./0127-2023-08-20.md) | [**0129**-2023-08-22.md](./0129-2023-08-22.md) |
 
 # tt04-reciprocal
 
@@ -12,6 +12,6 @@ I'll need a contrived wrapper because we don't have enough IOs in TT04 to fully 
 
 Initial commit is [here](https://github.com/algofoogle/tt04-reciprocal/commit/b4b8d4012ec6972096441333c2523f16eeff342f) but I think I can do better, e.g. by loading values into registers and then streaming out. Make it SPI-based, even if bite-wide rather than bit-wide?
 
-I then had to do a [minor fix](https://github.com/algofoogle/tt04-reciprocal/commit/50878ffcc8042d7b1b0ca5e9fdda962a6b80680b) in order for it to start building.
+I then had to do a [minor fix](https://github.com/algofoogle/tt04-reciprocal/commit/50878ffcc8042d7b1b0ca5e9fdda962a6b80680b) followed by [another](https://github.com/algofoogle/tt04-reciprocal/commit/5c64ee5be92dd2610ebce1b79973acbe621aed08) in order for it to start building.
 
 Let's see how this goes...
