Minor update to tip 2308A

--- a/tips/2308A.md
+++ b/tips/2308A.md
@@ -14,7 +14,7 @@
     *   Check overall procedure compared with what's shown below.
     *   Update this Tip if needed.
     *   Date it here: This is current as of 2023-08-22 for TT04 and action commit [9146324](https://github.com/TinyTapeout/tt-gds-action/commit/91463242e866985367e15d6ebe9358bd484c9667).
-2.  Use MPW8 VM.
+2.  Use MPW8 VM. NOTE: This assumes you've already done the "4. Install Openlane" step (i.e. git-clone it and make inside `~/tt/openlane`).
 3.  Clone your TT-based repo and **go into it**.
 4.  Clone tt-support-tools into your repo: `git clone -b tt04 https://github.com/TinyTapeout/tt-support-tools tt` -- NOTE: Update `tt04` branch/tag if required.
 5.  Run these commands to prep:
