--- a/tips/2308B.md
+++ b/tips/2308B.md
@@ -1,3 +1,7 @@
 # Tip 2308B: Handy links for Zero to ASIC and Tiny Tapeout
 
-*   [tt-support-tools](https://github.com/TinyTapeout/tt-support-tools)
+*   [tt-support-tools](https://github.com/TinyTapeout/tt-support-tools): Repo/tools used for running TT jobs esp. GDS hardening.
+*   [tt-gds-action](https://github.com/TinyTapeout/tt-gds-action/blob/main/action.yml): GHA that runs GDS hardening for TT.
+*   [Hardening Tiny Tapeout Projects Locally](https://docs.google.com/document/d/1aUUZ1jthRpg4QURIIyzlOaPWlmQzr-jBn3wZipVUPt4/edit#heading=h.wwc5ldl01nl5): Matt and Uri's TT local hardening instructions.
+*   [TT: Important!](https://tinytapeout.com/hdl/important/): TT important tips inc. top module definition.
+*   [TT: Working with HDLs](https://tinytapeout.com/hdl/): TT HDL guides
