Some extra notes on 0130 re getting it to work (in a way)

--- a/0130-2023-08-23.md
+++ b/0130-2023-08-23.md
@@ -498,3 +498,12 @@ Done.
 
 I've tarballed `issue_reproducible` and included it in this journal repo:
 *   [issue_reproducible.tar.gz](./files/0130/issue_reproducible.tar.gz)
+
+## Notes
+
+*   I tried adding `set ::env(SYNTH_STRATEGY) {DELAY 4}` to the end of `config.tcl` (it wasn't defined anywhere else), and then when I re-ran the OpenLane flow it seemed to work where it otherwise failed for line 163 (see [above](#reproducing-the-bug))... at least up until it aborts because of the (deliberately) too-small configured die-area.
+*   I then brought back the original line I wanted in the first place (`assign traced_size = heightScale[2:-8];`), exited the docker container, and just ran the conventional TT04 build process: `./tt/tt_tool.py --create-user-config && time ./tt/tt_tool.py --harden` -- and it generally worked.
+*   As a result of working on this, I created these branches:
+    *   [raybox-zero@yosys-abc-bughunt](https://github.com/algofoogle/raybox-zero/tree/yosys-abc-bughunt)
+    *   [tt04-raybox-zero@yosys-abc-bughunt](https://github.com/algofoogle/tt04-raybox-zero/tree/yosys-abc-bughunt) -- uses the above as its submodule.
+    *   ...and these should probably be deleted after a while.
