0131: raybox-zero: Improving the FSM

--- a/0069-2023-04-29.md
+++ b/0069-2023-04-29.md
@@ -1,5 +1,10 @@
 # 29 Apr 2023
 
+| Previous journal: | Next journal: |
+|-|-|
+| [**0068**-2023-04-28.md](./0068-2023-04-28.md) | [**0070**-2023-04-30.md](./0070-2023-04-30.md) |
+
+
 # Raybox
 
 *   I got raybox to work on my DE0-Nano FPGA, and made some changes...
