Logging initial results for 0131

--- a/0131-2023-08-24.md
+++ b/0131-2023-08-24.md
@@ -19,6 +19,84 @@
 4.  Implement reciprocal sharing in `wall_tracer`, and prove that it works... i.e. both that `make clean_sim` still works as expected (hopefully also when `pov` is being sent rotated views), and that it can synth.
 5.  Move `height_scaler` reciprocal into `wall_tracer` FSM.
 
+
+## Results from step 1 above
+
+NOTE: These results are numbered per the variations above (with 5..8 being for 8x2 tiles instead of 4x2).
+
+I got the stats from the results spat out by:
+
+cells_pre_abc, TotalCells, max speed are obtained from:
+
+```bash
+summary.py --design . --run 0 --caravel --full-summary | egrep 'pre_abc|clock_freq|TotalCells'
+```
+
+Logic cells is from:
+
+```bash
+./tt/tt_tool.py --print-cell-category | fgrep 'total cells'
+```
+
+Utilisation and wires are from:
+
+```bash
+./tt/tt_tool.py --print-stats
+```
+
+All 3:
+
+```bash
+summary.py --design . --run 0 --caravel --full-summary | egrep 'pre_abc|clock_freq|TotalCells'
+./tt/tt_tool.py --print-cell-category | fgrep 'total cells'
+./tt/tt_tool.py --print-stats
+```
+
+
+### 4x2 tiles
+
+1.  Completes in 20:39 with **success**
+    *   cells_pre_abc: 18,675
+    *   TotalCells: 20,968
+    *   Max speed: 25.0MHz
+    *   Logic cells: 8,054
+    *   Utilisation: 51.99%
+    *   Wires: 265,305um
+2.  Completes in 11:07 with **setup violations**
+    *   cells_pre_abc: 18,675
+    *   TotalCells: 20,933
+    *   Max speed: 40.8MHz
+    *   Logic cells: 8,046
+    *   Utilisation: 51.99%
+    *   Wires: 265,320um
+3.  yosys-abc fails.
+    *   cells_pre_abc: 18,478
+4.  yosys-abc fails.
+    *   cells_pre_abc: 18,675
+
+### 8x2 tiles
+
+1.  Completes in 17:37 with **success**
+    *   cells_pre_abc: 18,675
+    *   TotalCells: 35,823
+    *   Max speed: 25.0MHz
+    *   Logic cells: 7,990
+    *   Utilisation: 25.8%
+    *   Wires: 246,408um
+2.  Completes in 11:49 with **setup violations**
+    *   cells_pre_abc: 18,675
+    *   TotalCells: 35,903
+    *   Max speed: 40.67MHz
+    *   Logic cells: 8,021
+    *   Utilisation: 25.8%
+    *   Wires: 246,738um
+3.  yosys-abc fails.
+    *   cells_pre_abc: 18,478
+4.  yosys-abc fails.
+    *   cells_pre_abc: 18,675
+
+Note that I could previously get it to work when using the old OpenLane image (`cb59d1f`) and no SYNTH_STRATEGY=4 override, but it doesn't work anymore, probably due to a subtlety introduced from me needing to change unsized constants (e.g. from `0` to `1'b0`).
+
 ## Later
 
 1.  Remove redundant `map_rom`. Note that this will require sharing the one remaining instance between `map_overlay` and `wall_tracer`. This probably means either delaying trace start until after the screen region where `map_overlay` masters it, or maybe pre-loading the current stripe of map_overlay data into registers...?
