--- a/tips/2308A.md
+++ b/tips/2308A.md
@@ -35,6 +35,16 @@
     ./tt/tt_tool.py --create-user-config  # Match src/user_config.tcl to info.yaml
     ./tt/tt_tool.py --harden
     ```
+One-liner for repeated hardens using this new OpenLane image:
+```bash
+./tt/tt_tool.py --create-user-config && time ./tt/tt_tool.py --harden
+```
+
+One-liner using OLD OpenLane image from MPW8 (note: must use standard MPW8 env vars for everything else):
+```bash
+./tt/tt_tool.py --create-user-config && OPENLANE_IMAGE_NAME=efabless/openlane:cb59d1f84deb5cedbb5b0a3e3f3b4129a967c988-amd64 time ./tt/tt_tool.py --harden
+```
+
 
 ### Review steps
 
@@ -60,6 +70,13 @@
         ```bash
         summary.py --top YOUR_TOP_MODULE_NAME --design . --run 0 --caravel --gds
         ```
+
+A quick way to get a few useful stats:
+```bash
+summary.py --design . --run 0 --caravel --full-summary | egrep 'pre_abc|clock_freq|TotalCells'
+./tt/tt_tool.py --print-cell-category | fgrep 'total cells'
+./tt/tt_tool.py --print-stats
+```
 
 
 
